samples/_failures_safe/1761319700_622828_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0669fcd1.c: In function ‘main’:
./samples/SAFE/__tmp_0669fcd1.c:154:22: error: expected ‘)’ at end of input
  154 |     graph_add_edge(&g
      |                   ~  ^
      |                      )
./samples/SAFE/__tmp_0669fcd1.c:154:5: error: too few arguments to function ‘graph_add_edge’
  154 |     graph_add_edge(&g
      |     ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_0669fcd1.c:48:5: note: declared here
   48 | int graph_add_edge(struct Graph *g, int from, int to, int weight) {
      |     ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_0669fcd1.c:154:5: error: expected declaration or statement at end of input
  154 |     graph_add_edge(&g
      |     ^~~~~~~~~~~~~~
